--- a/src/app/employees/employee-list/employee-list.component.html
+++ b/src/app/employees/employee-list/employee-list.component.html
@@ -1,6 +1,6 @@
 <div class="search-div">
-  <button mat-raised-button>
-    <mat-icon>add</mat-icon>
+  <button mat-raised-button (click)="onCreate()">
+    <mat-icon>add</mat-icon>Create
   </button>
   <mat-form-field class="search-form-field" floatLabel="never">
     <input
@@ -52,10 +52,10 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let row">
-        <button mat-icon-button color="primary">
+        <button mat-icon-button color="primary" (click)="onEdit(row)">
           <mat-icon>edit</mat-icon>
         </button>
-        <button mat-icon-button color="warn">
+        <button mat-icon-button color="warn" (click)="onDelete(row.$key)">
           <mat-icon>delete_outline</mat-icon>
         </button>
       </td>
