--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,7 +46,20 @@ snack-bar-container.success {
   color: #fff;
 }
 
+snack-bar-container.warn {
+  background-color: #f99157;
+  color: #fff;
+}
+
 snack-bar-container.notification {
   font-size: 18px !important;
   font-weight: bold;
+}
+
+.btn-dialog-close {
+  width: 45px;
+  min-width: 0px !important;
+  height: 40px;
+  padding: 0px !important;
+  color: teal !important;
 }
